--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@ article{
     max-width: 70ch;
     padding: 1rem;
     margin: 1rem auto;
+
+    box-shadow: 0 0 0.5rem var(--body-color);
 }
 
 footer{
